Use pRADEONEnt to find both screens of a GPU in radeon_mode_hotplug

Fixes misbehaviour when hotplugging DisplayPort connectors on secondary
GPUs.

Fixes: c801f9f10a5d ("Handle Zaphod mode correctly in radeon_mode_hotplug")
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=98626
Reviewed-by: Alex Deucher <alexander.deucher@amd.com>